--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,35 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
-//apply plugin: 'application'
-
-//mainClassName = 'rpg_proxy_server.RPGServer'
 
 sourceCompatibility = 1.8
-version = '1.0'
+version = '0.1'
+
 jar {
     manifest {
-        // attributes 'Implementation-Title': 'RPG Proxy Server',
-        //           'Implementation-Version': version,
-        attributes 'Main-Class': 'rpg_proxy_server.RPGProxyServer'
+        attributes 'Implementation-Title': 'RPG Proxy Server',
+                   'Implementation-Version': version,
+                   'Main-Class': 'rpg_proxy_server.RPGProxyServer'
     }
+}
+
+
+// Create a single Jar with all dependencies
+task allJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'RPG Proxy Server',
+                   'Implementation-Version': version,
+                   'Main-Class': 'rpg_proxy_server.RPGProxyServer'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
 
 // Repositories where to find the dependencies of RGProxyServer
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     jcenter()
-    mavenCentral()
 }
 
 // Dependencies for RPGProxyServer production and test code
